...
  "dateFrom": "from",
  "dateTo": "to",
  "dateBetweenDays": "to",
  "dateStarting": "Starting",
  "dateLast": "Last",
  "dateUntil": "Until",
  "feedFilterAll": "All",
  "feedFilterPending": "Pending",
  "feedFilterApproved": "Approved",
  "feedFilterRejected": "Rejected",
  "feedEmptyAll": "No events available",
  "feedEmptyPending": "No events pending approval",
  "feedEmptyApproved": "No approved events",
...
  "feedEditEvent": "Edit event",
  "feedManageAssociationEvents": "Manage association events",
  "feedNews": "Calendar",
  "feedNewsType": "News type",
  "feedNoAssociationEvents": "No association events",
  "feedApply": "Apply",
  "feedAdmin": "Administration",
  "feedCreateAnEvent": "Create an event",
  "feedManageRequests": "Manage requests",
  "feedNoNewsAvailable": "No news available",
  "feedRefresh": "Refresh",
  "retry": "Retry",
  "feedPleaseProvideASGExternalLink": "Please provide a SG external link",
...
  "adminCountry": "Country",
  "adminCreateAssociationMembership": "Create membership",
  "adminCreatedAssociationMembership": "Membership created",
  "adminCreationError": "Error during creation",
  "adminDateError": "Start date must be before end date",
  "adminDefineAsBankAccountHolder": "Define as bank account holder",
  "adminDelete": "Delete",
  "adminDeleteAssociationMember": "Delete member?",
  "adminDeleteAssociationMemberConfirmation": "Are you sure you want to delete this member?",
  "adminDeleteAssociationMembership": "Delete membership?",
  "adminDeletedAssociationMembership": "Membership deleted",
  "adminDeletedGroup": "Group deleted",
  "adminDeletedSchool": "School deleted",
...
  "adminDeleteGroupConfirmation": "Are you sure you want to delete this group?",
  "adminDeleteSchool": "Delete school?",
  "adminDeleteUsers": "Delete users",
  "adminDeleting": "Deleting",
  "adminDeletingError": "Error while deleting",
  "adminDescription": "Description",
  "adminEdit": "Edit",
  "adminEditAssociation": "Edit association : {associationName}",
  "@adminEditAssociation": {
    "description": "Edit association",
    "placeholders": {
      "associationName": {
        "type": "String"
...
  "amapArchivingDelivery": "Archiving delivery",
  "amapCategory": "Category",
  "amapCloseDelivery": "Lock",
  "amapCommandDate": "Order date",
  "amapCommandName": "Order name",
  "amapCommandProducts": "Order products",
  "amapConfirm": "Confirm",
  "amapContact": "Association contacts",
  "amapCreateCategory": "Create category",
  "amapDelete": "Delete",
  "amapDeletedDelivery": "Delivery deleted",
  "amapDeleteDelivery": "Delete delivery?",
  "amapDeleteDeliveryDescription": "Are you sure you want to delete this delivery?",
...
  "toolSuccess": "Success",
  "voteAdd": "Add",
  "voteAddedPretendance": "List added",
  "voteAddedSection": "Section added",
  "voteAddingError": "Error adding",
  "voteAddMember": "Add a member",
  "voteAddPretendance": "Add a list",
  "voteAddSection": "Add a section",
  "voteAll": "All",
  "voteAlreadyAddedMember": "Member already added",
  "voteAlreadyVoted": "Vote recorded",
  "voteCanNotVote": "You cannot vote",
  "voteChooseList": "Choose a list",
  "voteClear": "Reset",
  "voteClearVotes": "Reset votes",
  "voteClosedVote": "Votes closed",
  "voteCloseVote": "Close votes",
  "voteConfirmVote": "Confirm vote",
  "voteCountVote": "Count votes",
  "voteDelete": "Delete",
  "voteDeleteAll": "Delete all",
  "voteDeleteAllDescription": "Do you really want to delete everything?",
  "voteDeletedAll": "All deleted",
  "voteDeletedPipo": "Fake lists deleted",
  "voteDeletedSection": "Section deleted",
  "voteDeletePipo": "Delete fake lists",
  "voteDeletePipoDescription": "Do you really want to delete the fake lists?",
  "voteDeletePretendance": "Delete the list",
  "voteDeletePretendanceDesc": "Do you really want to delete this list?",
  "voteDeleteSection": "Delete the section",
  "voteDeleteSectionDescription": "Do you really want to delete this section?",
  "voteDeletingError": "Error deleting",
  "voteDescription": "Description",
  "voteEdit": "Edit",
  "voteEditedPretendance": "List edited",
  "voteEditedSection": "Section edited",
  "voteEditingError": "Error editing",
  "voteErrorClosingVotes": "Error closing votes",
  "voteErrorCountingVotes": "Error counting votes",
  "voteErrorOpeningVotes": "Error opening votes",
  "voteErrorResetingVotes": "Error resetting votes",
...
  "voteName": "Name",
  "voteNoPretendanceList": "No list of candidates",
  "voteNoSection": "No section",
  "voteNoSectionList": "No section",
  "voteNotOpenedVote": "Vote not opened",
  "voteOnGoingCount": "Counting in progress",
  "voteOpenVote": "Open votes",
  "votePipo": "Fake",
  "votePretendance": "Lists",
  "votePretendanceDeleted": "Candidate list deleted",
  "votePretendanceNotDeleted": "Error deleting",
  "voteProgram": "Program",
  "votePublish": "Publish",
  "votePublishVoteDescription": "Do you really want to publish the votes?",
  "voteResetedVotes": "Votes reset",
  "voteResetVote": "Reset votes",
  "voteResetVoteDescription": "What do you want to do?",
  "voteRole": "Role",
  "voteSection": "Section",
  "voteSectionDescription": "Section description",
  "voteSectionName": "Section name",
  "voteSeeMore": "See more",
  "voteSelected": "Selected",
  "voteShowVotes": "Show votes",
  "voteVote": "Vote",
  "voteVoteError": "Error recording vote",
  "voteVoteFor": "Vote for ",
  "voteVoteNotStarted": "Vote not opened",
  "voteVoters": "Voting groups",
  "voteVotes": "Votes",
  "voteVotesClosed": "Votes closed",
  "voteVotesCounted": "Votes counted",
  "voteVotesOpened": "Votes opened",
  "voteVoteSuccess": "Vote recorded",
  "voteWarning": "Warning",
  "voteWarningMessage": "Selection will not be saved.\nDo you want to continue?",
  "ticketsTickets": "Tickets",
  "ticketsTicketsDescription": "Book your seats for events",
...
